--- a/cli/.vscode/settings.json
+++ b/cli/.vscode/settings.json
@@ -3,6 +3,7 @@
           "funciones.h": "c",
           "stdlib.h": "c",
           "stdio.h": "c",
-          "config.h": "c"
+          "config.h": "c",
+          "string.h": "c"
      }
 }
