add crearArchivosMock() and read docs materias.dat materias-length.dat

--- a/cli/.vscode/settings.json
+++ b/cli/.vscode/settings.json
@@ -4,6 +4,7 @@
           "stdlib.h": "c",
           "stdio.h": "c",
           "config.h": "c",
-          "string.h": "c"
+          "string.h": "c",
+          "types.h": "c"
      }
 }
