--- a/cli/.prettierrc
+++ b/cli/.prettierrc
@@ -1,21 +1,23 @@
 {
-     "arrowParens": "avoid",
-     "bracketSameLine": false,
-     "bracketSpacing": true,
-     "semi": true,
-     "singleQuote": false,
-     "jsxSingleQuote": true,
-     "quoteProps": "as-needed",
-     "trailingComma": "all",
-     "singleAttributePerLine": false,
-     "htmlWhitespaceSensitivity": "css",
-     "vueIndentScriptAndStyle": false,
-     "proseWrap": "preserve",
-     "insertPragma": false,
-     "printWidth": 100,
-     "requirePragma": false,
-     "tabWidth": 5,
-     "useTabs": false,
-     "embeddedLanguageFormatting": "auto",
-     "rangeStart": 0
+	"arrowParens": "always",
+	"bracketSameLine": false,
+	"objectWrap": "preserve",
+	"bracketSpacing": true,
+	"semi": true,
+	"experimentalOperatorPosition": "end",
+	"experimentalTernaries": false,
+	"singleQuote": false,
+	"jsxSingleQuote": false,
+	"quoteProps": "as-needed",
+	"trailingComma": "all",
+	"singleAttributePerLine": false,
+	"htmlWhitespaceSensitivity": "css",
+	"vueIndentScriptAndStyle": false,
+	"proseWrap": "preserve",
+	"insertPragma": false,
+	"printWidth": 90,
+	"requirePragma": false,
+	"tabWidth": 2,
+	"useTabs": true,
+	"embeddedLanguageFormatting": "auto"
 }
